--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "jquery-ui": "^1.12.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.2.3"
+    "mongoose": "^5.2.3",
+    "node-fetch": "^2.2.0"
   }
 }
