--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "google-spreadsheet": "^2.0.5",
+    "googleapis": "^27.0.0",
     "jquery-ui": "^1.12.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.3",
