--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "google-charts": "^1.5.0",
     "google-spreadsheet": "^2.0.5",
     "googleapis": "^27.0.0",
     "jquery-ui": "^1.12.1",
