--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "google-charts": "^1.5.0",
-    "google-spreadsheet": "^2.0.5",
     "googleapis": "^27.0.0",
     "jquery-ui": "^1.12.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.2.3",
-    "node-fetch": "^2.2.0"
+    "mongoose": "^5.2.3"
   }
 }
