--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "googleapis": "^27.0.0",
     "jquery-ui": "^1.12.1",
     "method-override": "^3.0.0",
